manifests/contrib/angos/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  # ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - registry.example.com
  #     secretName: registry-tls
  rules:
    - host: registry.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angos
                port:
                  number: 5000
